@@ -2568,6 +2568,17 @@
       </component>
     </version>
   </module>
+  <module name="sound-juicer">
+    <version release="gnome-2.4">
+      <component name="sound-juicer" dir="sound-juicer" group="extras">
+	<podir dir="po"/>
+	<potname name="sound-juicer.pot"/>
+	<branch name="HEAD"/>
+	<regenerate/>
+	<download/>
+      </component>
+    </version>
+  </module>
   <module name="stickynotes_applet">
     <version release="gnome-2.4">
       <component name="stickynotes_applet" dir="stickynotes_applet" group="fifth-toe">
