@@ -1,3 +1,7 @@
+2003-05-13  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: Added sound-juicer.
+
 2003-05-13  Abel Cheung  <maddog@linux.org.hk>
 
 	* translation-status.xml: bonobo-activation removed from GNOME 2.4.
